List wallet stats on /check-email (#110)
