# docs/swagger.json
@@ -399,7 +399,8 @@
             "properties": {
                 "address": {
                     "description": "Address is the email address to check. Must be confirmed.",
-                    "type": "string"
+                    "type": "string",
+                    "example": "thaler@a16z.com"
                 }
             }
         },
@@ -409,6 +410,17 @@
                 "inUse": {
                     "description": "InUse specifies whether the email is attached to a DIMO user.",
                     "type": "boolean"
+                },
+                "wallets": {
+                    "type": "object",
+                    "properties": {
+                        "external": {
+                            "type": "integer"
+                        },
+                        "inApp": {
+                            "type": "integer"
+                        }
+                    }
                 }
             }
         },
